@@ -1,0 +1,15 @@
+# $NetBSD: Makefile,v 1.1 2017/12/06 21:51:59 triaxx Exp $
+
+DISTNAME=	monotonic-1.4
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
+CATEGORIES=	time
+MASTER_SITES=	${MASTER_SITE_PYPI:=m/monotonic/}
+
+MAINTAINER=	triaxx@NetBSD.org
+HOMEPAGE=	https://github.com/atdt/monotonic/
+COMMENT=	Implementation of time.monotonic() for Python
+LICENSE=	apache-2.0
+
+.include "../../lang/python/application.mk"
+.include "../../lang/python/egg.mk"
+.include "../../mk/bsd.pkg.mk"
