@@ -1,0 +1,8 @@
+@comment $NetBSD: PLIST,v 1.1 2017/12/06 21:51:59 triaxx Exp $
+${PYSITELIB}/monotonic.pyo
+${PYSITELIB}/monotonic.pyc
+${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
+${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
+${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
+${PYSITELIB}/${EGG_INFODIR}/top_level.txt
+${PYSITELIB}/monotonic.py
